--- a/learning/package.json
+++ b/learning/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.10",
