--- a/next-authentication/package.json
+++ b/next-authentication/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mongodb": "^5.5.0",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
